@@ -36,7 +36,9 @@ public class InspectCommand implements TabExecutor {
                     return true;
                 }
 
-                if (Config.getInstance().getScoreboardsEnabled() && sender instanceof Player && Config.getInstance().getInspectUseBoard()) {
+                if (Config.getInstance().getScoreboardsEnabled()
+                        && sender instanceof Player
+                        && Config.getInstance().getInspectUseBoard()) {
                     ScoreboardManager.enablePlayerInspectScoreboard((Player) sender, profile);
 
                     if (!Config.getInstance().getInspectUseChat()) {
@@ -63,16 +65,21 @@ public class InspectCommand implements TabExecutor {
 
             } else {
                 Player target = mcMMOPlayer.getPlayer();
+                boolean isVanished = false;
 
                 if (CommandUtils.hidden(sender, target, Permissions.inspectHidden(sender))) {
-                    sender.sendMessage(LocaleLoader.getString("Inspect.Offline"));
-                    return true;
-                } else if (CommandUtils.tooFar(sender, target, Permissions.inspectFar(sender))) {
+                    isVanished = true;
+                }
+
+                //Only distance check players who are online and not vanished
+                if (!isVanished && CommandUtils.tooFar(sender, target, Permissions.inspectFar(sender))) {
                     return true;
                 }
 
-                if (Config.getInstance().getScoreboardsEnabled() && sender instanceof Player && Config.getInstance().getInspectUseBoard()) {
-                    ScoreboardManager.enablePlayerInspectScoreboard((Player) sender, mcMMOPlayer.getProfile());
+                if (Config.getInstance().getScoreboardsEnabled()
+                        && sender instanceof Player
+                        && Config.getInstance().getInspectUseBoard()) {
+                    ScoreboardManager.enablePlayerInspectScoreboard((Player) sender, mcMMOPlayer);
 
                     if (!Config.getInstance().getInspectUseChat()) {
                         return true;
