@@ -1,6 +1,11 @@
 Version 2.1.177
     Environmentally aware will now protect Wolves from Magma blocks
     Fixed a bug where mcMMO would fail to update a players name when it detected a name change
+    mcMMO will treat vanished players as if they are offline when using the inspect command on them now (see notes)
+
+    NOTES:
+    A few changes were made to the inspect command, it used to reject you when used on vanished players, now it will be processed as if they are offline.
+    Additionally if you do inspect a vanished player, it will not use their display name (consistent with offline players) as that would give them away for being online
 
 Version 2.1.176
     Another fix for Double Smelt bringing item stack size to illegal values
